add to main index ref to lab 3

--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 <body>
     <a href="LR_1/index.html">Задание №1</a>
     <a href="LR_1/index.html">Задание №2</a>
+    <a href="LR_3/index.html">Задание №3+4</a>
 </body>
