update quick-view-modal: set display none for start value

--- a/LR_1/index.html
+++ b/LR_1/index.html
@@ -9,7 +9,7 @@
     <script defer src="scripts.js"></script>
 </head>
 <body>
-    <div id="quick-view-modal" class="modal">
+    <div id="quick-view-modal" class="modal" style="display: none;">
         <div class="modal-content">
             <span class="close">&times;</span>
             <img id="modal-shirt-image" src="" alt="Shirt Image" class="modal-shirt-image">
